@@ -7,6 +7,7 @@ Bug Fixes:
   - The ColorPickerBuilder from ORCJAVA-235 is using the wrong attribute name for the dynamic attribute (ORCJAVA-290)
   - openremote.sh start creates an unbound catalina.out file (ORCJAVA-273)
   - Fix openremote.sh to work with paths that contain spaces (ORCJAVA-280)
+  - Controller Error occurs when there are spaces in the path (ORCJAVA-263)
 
 Controller 2.1.0 (2012-XX-XX Twin Galaxies)
 ===========================================
